--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-components": "^3.1.3",
+    "@apollo/react-hoc": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.8.3",
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,11 +14,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "apollo-cache": "^1.3.4",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
+    "apollo-utilities": "^1.3.3",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "react": "^16.12.0",
@@ -48,12 +52,12 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.11.2",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^1.19.1",
+    "@graphql-codegen/fragment-matcher": "1.11.2",
     "@graphql-codegen/typescript": "1.11.2",
     "@graphql-codegen/typescript-operations": "1.11.2",
     "@graphql-codegen/typescript-react-apollo": "1.11.2",
-    "@graphql-codegen/fragment-matcher": "1.11.2"
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   }
 }
