--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sw-shop-v1",
-  "version": "0.1.0",
+  "name": "rm-shop-v1",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@apollo/react-components": "^3.1.3",
