--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rm-shop-v1",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://komyg.github.io/rm-shop-v1",
   "dependencies": {
     "@apollo/react-components": "^3.1.3",
     "@apollo/react-hoc": "^3.1.3",
@@ -33,7 +34,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "gen-graphql": "graphql-codegen --config codegen.yml"
+    "gen-graphql": "graphql-codegen --config codegen.yml",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -58,6 +61,7 @@
     "@graphql-codegen/typescript-react-apollo": "1.12.2",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "gh-pages": "^2.2.0",
     "prettier": "^1.19.1"
   }
 }
